Revise index.html for content and structure updates
Updated HTML structure and content for KiraTech Spa.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <header>
-    <img src="KiraTechspa.png" class="logo">
+    <img src="kiratechspa.png" class="logo">
 </header>
 
 
@@ -138,3 +138,4 @@
 
 </body>
 </html>
+
