--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="item" onclick="mostrarDetalle(this, 'mantpc')">
         Mantenimiento Profesional de PC → CORE CLEAN – Servicio Base
         <div style="font-size: 0.85rem; color: #c0c0ff; margin-top: 8px;">
-            ⏱️ 2-4h | 💰 Desde 500 | 🔥 Temp -15°C típico | 📊 Garantía 30d
+            ⏱️ 2-5h | 💰 MXN$950 | 🔥 Temp -15°C típico | 📊 Garantía 30d
         </div>
         <a class="reserve-btn" href="https://wa.me/526142738302?text=Hola%20KiraTech%20Spa,%20quiero%20agendar%20Mantenimiento%20Profesional%20de%20PC%20en%20Chihuahua%20(Servicio%20a%20domicilio%20Norte).%20Mi%20nombre:%20%5BTu%20nombre%5D">Reservar</a>
     </div>
@@ -40,7 +40,7 @@
     <div class="item" onclick="mostrarDetalle(this, 'pasta')">
         ❄️ Cambio de Pasta Térmica Premium → THERMAL BOOST – Enfriamiento MX
         <div style="font-size: 0.85rem; color: #c0c0ff; margin-top: 8px;">
-            ⏱️ 1h-2h | 💰 desde 400| ❄️ -10°C típico | 📊 Garantía 12m
+            ⏱️ 1h-2h | 💰 MXN$800| ❄️ -10°C típico | 📊 Garantía 12m
         </div>
         <a class="reserve-btn" href="https://wa.me/526142738302?text=Hola%20KiraTech%20Spa,%20quiero%20agendar%20Cambio%20de%20Pasta%20T%C3%A9rmica%20(Arctic%20MX-4/MX-6)%20en%20Chihuahua%20(Servicio%20a%20domicilio%20Norte).%20Mi%20nombre:%20%5BTu%20nombre%5D">Reservar</a>
     </div>
@@ -48,7 +48,7 @@
     <div class="item" onclick="mostrarDetalle(this, 'optimizacion')">
         Optimización del Sistema → SYSTEM BOOST – Modo Bestia
         <div style="font-size: 0.85rem; color: #c0c0ff; margin-top: 8px;">
-            ⏱️ 1.5-2h | 💰 MX300$| ⚙️ Mejoras reales y medibles | 📊 Garantía 60d
+            ⏱️ 1.5-2h | 💰 MX$300| ⚙️ Mejoras reales y medibles | 📊 Garantía 60d
         </div>
         <a class="reserve-btn" href="https://wa.me/526142738302?text=Hola%20KiraTech%20Spa,%20quiero%20agendar%20Diagn%C3%B3stico%20y%20Mejoras%20(SSD)%20en%20Chihuahua%20(Servicio%20a%20domicilio%20Norte).%20Mi%20nombre:%20%5BTu%20nombre%5D">Reservar</a>
     </div>
@@ -56,7 +56,7 @@
     <div class="item" onclick="mostrarDetalle(this, 'ssd')">
         Cambio e Instalación de SSD → SSD OVERDRIVE – Turbo MX
         <div style="font-size: 0.85rem; color: #c0c0ff; margin-top: 8px;">
-            ⏱️ 1-2h | 💰 MX$400 - MX$600 | 🚀 Boot ~15s típico | 📊 Garantía 30d
+            ⏱️ 1-2h | 💰 MX$600 | 🚀 Boot ~15s típico | 📊 Garantía 30d
         </div>
         <a class="reserve-btn" href="https://wa.me/526142738302?text=Hola%20KiraTech%20Spa,%20quiero%20agendar%20Instalaci%C3%B3n%20de%20SSD%20en%20Chihuahua%20(Servicio%20a%20domicilio%20Norte).%20Mi%20nombre:%20%5BTu%20nombre%5D">Reservar</a>
     </div>
@@ -72,7 +72,7 @@
     <div class="item" onclick="mostrarDetalle(this, 'ps4')">
         🎮 PS4 → PS4 SILENT MODE – Anti Turbina
         <div style="font-size: 0.85rem; color: #c0c0ff; margin-top: 8px;">
-            ⏱️ 2-2.5h | 💰 Desde MX$400 | 🔊 -80% Ruido | 📊 Menor termeratura
+             ⏱️ 2-2.5h | 💰 MX$750 | 🔊 -70% Ruido | 📊 Menor termeratura | Mayor rendimiento y extiende su vida
     </div>
     <a class="reserve-btn" href="https://wa.me/526142738302?text=Hola%20KiraTech%20Spa,%20quiero%20agendar%20Mantenimiento%20Profesional%20de%20PC%20en%20Chihuahua%20(Servicio%20a%20domicilio%20Norte).%20Mi%20nombre:%20%5BTu%20nombre%5D">Reservar</a>
     </div>
@@ -83,14 +83,14 @@
     <div class="item" onclick="mostrarDetalle(this, 'xbox')">
         🎮 Xbox → XBOX ICE BOOST – Estabilidad Pro
         <div style="font-size: 0.85rem; color: #c0c0ff; margin-top: 8px;">
-            ⏱️ 2-2.5h | 💰 Desde MX$400 | ⚡ Rendimiento estable | 📊 Garantía 60d
+            ⏱️ 2-2.5h | 💰 MX$750 | 🔊 -70% Ruido | 📊 Menor termeratura | Mayor rendimiento y extiende su vida
         </div>
         <a class="reserve-btn" href="https://wa.me/526142738302?text=Hola%20KiraTech%20Spa,%20quiero%20agendar%20Mantenimiento%20Profesional%20de%20PC%20en%20Chihuahua%20(Servicio%20a%20domicilio%20Norte).%20Mi%20nombre:%20%5BTu%20nombre%5D">Reservar</a>
     </div> 
     <div class="item" onclick="mostrarDetalle(this, 'switch')">
         🎮 Switch → SWITCH COOL FIX – Control Térmico
         <div style="font-size: 0.85rem; color: #c0c0ff; margin-top: 8px;">
-            ⏱️ 1.5-2h | 💰Desde MX$400 | 🌡️ -10°C | 📊 Garantía 45d
+           ⏱️ 2-2.5h | 💰 MX$750 | 🔊 -70% Ruido | 📊 Menor termeratura | Mayor rendimiento y extiende su vida
         </div>
         <a class="reserve-btn" href="https://wa.me/526142738302?text=Hola%20KiraTech%20Spa,%20quiero%20agendar%20Mantenimiento%20Profesional%20de%20PC%20en%20Chihuahua%20(Servicio%20a%20domicilio%20Norte).%20Mi%20nombre:%20%5BTu%20nombre%5D">Reservar</a>
     </div>
@@ -139,6 +139,7 @@
 
 </body>
 </html>
+
 
 
 
