--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             ⏱️ 2-5h | 💰 MXN$950 | 🔥 Temp -15°C típico | 📊 Garantía 30d
         </div>
         <a class="reserve-btn" 
-           href="https://wa.me/526142738302?text=Hola%20KiraTech%20Spa,%20me%20interesa%20contratar%20el%20Mantenimiento%20Profesional%20de%20PC%20(CORE%20CLEAN).%20Mi%20nombre:">
+           href="https://wa.me/526142738302?text=Hola%20KiraTech%20Spa,%20me%20interesa%20contratar%20el%20Mantenimiento%20Profesional%20de%20PC%20(CORE%20CLEAN)">
            Reservar
         </a>
     </div>
@@ -46,7 +46,7 @@
             ⏱️ 1h-2h | 💰 MXN$800| ❄️ -10°C típico | 📊 Garantía 12m
         </div>
         <a class="reserve-btn" 
-           href="https://wa.me/526142738302?text=Hola%20KiraTech%20Spa,%20me%20interesa%20el%20Cambio%20de%20Pasta%20Térmica%20Premium%20(THERMAL%20BOOST%20MX).%20Mi%20nombre:">
+           href="https://wa.me/526142738302?text=Hola%20KiraTech%20Spa,%20me%20interesa%20el%20Cambio%20de%20Pasta%20Térmica%20Premium%20(THERMAL%20BOOST%20MX)">
            Reservar
         </a>
     </div>
@@ -57,7 +57,7 @@
             ⏱️ 1.5-2h | 💰 MX$300| ⚙️ Mejoras reales y medibles | 📊 Garantía 60d
         </div>
         <a class="reserve-btn" 
-           href="https://wa.me/526142738302?text=Hola%20KiraTech%20Spa,%20quiero%20contratar%20la%20Optimizaci%C3%B3n%20del%20Sistema%20(SYSTEM%20BOOST).%20Mi%20nombre:">
+           href="https://wa.me/526142738302?text=Hola%20KiraTech%20Spa,%20quiero%20contratar%20la%20Optimizaci%C3%B3n%20del%20Sistema%20(SYSTEM%20BOOST)">
            Reservar
         </a>
     </div>
@@ -68,7 +68,7 @@
             ⏱️ 1-2h | 💰 MX$600 | 🚀 Boot ~15s típico | 📊 Garantía 30d
         </div>
         <a class="reserve-btn" 
-           href="https://wa.me/526142738302?text=Hola%20KiraTech%20Spa,%20me%20interesa%20el%20Cambio%20e%20Instalaci%C3%B3n%20de%20SSD%20(SSD%20OVERDRIVE).%20Mi%20nombre:">
+           href="https://wa.me/526142738302?text=Hola%20KiraTech%20Spa,%20me%20interesa%20el%20Cambio%20e%20Instalaci%C3%B3n%20de%20SSD%20(SSD%20OVERDRIVE)">
            Reservar
         </a>
     </div>
@@ -87,7 +87,7 @@
              ⏱️ 2-2.5h | 💰 MX$750 | 🔊 -70% Ruido | 📊 Menor termeratura | Mayor rendimiento y extiende su vida
         </div>
         <a class="reserve-btn" 
-           href="https://wa.me/526142738302?text=Hola%20KiraTech%20Spa,%20me%20interesa%20el%20servicio%20PS4%20SILENT%20MODE%20(Anti%20Turbina).%20Mi%20nombre:">
+           href="https://wa.me/526142738302?text=Hola%20KiraTech%20Spa,%20me%20interesa%20el%20servicio%20PS4%20SILENT%20MODE%20(Anti%20Turbina)">
            Reservar
         </a>
     </div>
@@ -98,7 +98,7 @@
             ⏱️ 2-2.5h | 💰 MX$750 | 🔊 -70% Ruido | 📊 Menor termeratura | Mayor rendimiento y extiende su vida
         </div>
         <a class="reserve-btn" 
-           href="https://wa.me/526142738302?text=Hola%20KiraTech%20Spa,%20me%20interesa%20el%20servicio%20XBOX%20ICE%20BOOST%20(Estabilidad%20Pro).%20Mi%20nombre:">
+           href="https://wa.me/526142738302?text=Hola%20KiraTech%20Spa,%20me%20interesa%20el%20servicio%20XBOX%20ICE%20BOOST%20(Estabilidad%20Pro)">
            Reservar
         </a>
     </div> 
@@ -109,7 +109,7 @@
            ⏱️ 2-2.5h | 💰 MX$750 | 🔊 -70% Ruido | 📊 Menor termeratura | Mayor rendimiento y extiende su vida
         </div>
         <a class="reserve-btn" 
-           href="https://wa.me/526142738302?text=Hola%20KiraTech%20Spa,%20me%20interesa%20el%20servicio%20SWITCH%20COOL%20FIX%20(Control%20T%C3%A9rmico).%20Mi%20nombre:">
+           href="https://wa.me/526142738302?text=Hola%20KiraTech%20Spa,%20me%20interesa%20el%20servicio%20SWITCH%20COOL%20FIX%20(Control%20T%C3%A9rmico)">
            Reservar
         </a>
     </div>
@@ -121,7 +121,7 @@
     <div class="testimonio">
         <div class="estrellas">⭐⭐⭐⭐⭐</div>
         <p>"En mi Asus TUF A15 (Ryzen 7) la temperatura del CPU bajó 32°C y la GPU 16°C después de limpieza, limpieza de disipador y aplicación de Arctic MX-4. Lo medimos antes y después con stress test. Resultado real y documentado."</p>
-        <p class="autor">— Ricardo (Chihuahua)</p>
+        <p class="autor">— Ricardo</p>
     </div>
     <div class="testimonio">
         <div class="estrellas">⭐⭐⭐⭐⭐</div>
@@ -156,6 +156,7 @@
 
 </body>
 </html>
+
 
 
 
