Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -108,39 +108,60 @@
 </p>
 
 <div class="catalogo" id="consolas">
+
     <div class="item" onclick="mostrarDetalle(this, 'ps4')">
-        🎮 PS4 → PS4 SILENT MODE – Anti Turbina
-        <div style="font-size: 0.85rem; color: #c0c0ff; margin-top: 8px;">
-             ⏱️ 2-2.5h | 💰 MX$750 | 🔊 -70% Ruido | 📊 Menor termeratura | Mayor rendimiento y extiende su vida
+        🎮 ¿Tu PS4 suena como turbina?
+        <div style="font-size:0.9rem; color:#c0c0ff; margin-top:6px;">
+            Mantenimiento térmico profesional → <strong>PS4 SILENT MODE</strong>
+        </div>
+        <div style="font-size:0.85rem; color:#ff9ff3; margin-top:6px;">
+            Mucho menos ruido • Menos calor • Juego estable
+        </div>
+        <div style="font-size:0.8rem; color:#aaa; margin-top:6px;">
+            ⏱️ 2–2.5h | 💰 MX$750 | 🔊 -70% ruido | 📊 Mayor rendimiento
         </div>
         <a class="reserve-btn" 
-           href="https://wa.me/526142738302?text=Hola%20KiraTech%20Spa,%20me%20interesa%20el%20servicio%20PS4%20SILENT%20MODE%20(Anti%20Turbina)">
-           Reservar
+           href="https://wa.me/526142738302?text=Hola%20KiraTech%20Spa,%20me%20interesa%20el%20servicio%20PS4%20SILENT%20MODE%20(Anti%20Turbina).%20Mi%20nombre:%20[TU%20NOMBRE]">
+           📲 Ver detalles y reservar
         </a>
     </div>
 
     <div class="item" onclick="mostrarDetalle(this, 'xbox')">
-        🎮 Xbox → XBOX ICE BOOST – Estabilidad Pro
-        <div style="font-size: 0.85rem; color: #c0c0ff; margin-top: 8px;">
-            ⏱️ 2-2.5h | 💰 MX$750 | 🔊 -70% Ruido | 📊 Menor termeratura | Mayor rendimiento y extiende su vida
+        🎮 ¿Tu Xbox se calienta o baja rendimiento?
+        <div style="font-size:0.9rem; color:#c0c0ff; margin-top:6px;">
+            Enfriamiento y limpieza profesional → <strong>XBOX ICE BOOST</strong>
+        </div>
+        <div style="font-size:0.85rem; color:#ff9ff3; margin-top:6px;">
+            Temperaturas estables • Menos ruido • Más fluidez
+        </div>
+        <div style="font-size:0.8rem; color:#aaa; margin-top:6px;">
+            ⏱️ 2–2.5h | 💰 MX$750 | 🔊 -70% ruido | 📊 Mayor estabilidad
         </div>
         <a class="reserve-btn" 
-           href="https://wa.me/526142738302?text=Hola%20KiraTech%20Spa,%20me%20interesa%20el%20servicio%20XBOX%20ICE%20BOOST%20(Estabilidad%20Pro)">
-           Reservar
+           href="https://wa.me/526142738302?text=Hola%20KiraTech%20Spa,%20me%20interesa%20el%20servicio%20XBOX%20ICE%20BOOST%20(Estabilidad%20Pro).%20Mi%20nombre:%20[TU%20NOMBRE]">
+           📲 Ver detalles y reservar
         </a>
     </div> 
 
     <div class="item" onclick="mostrarDetalle(this, 'switch')">
-        🎮 Switch → SWITCH COOL FIX – Control Térmico
-        <div style="font-size: 0.85rem; color: #c0c0ff; margin-top: 8px;">
-           ⏱️ 2-2.5h | 💰 MX$750 | 🔊 -70% Ruido | 📊 Menor termeratura | Mayor rendimiento y extiende su vida
+        🎮 ¿Tu Switch se calienta o baja FPS?
+        <div style="font-size:0.9rem; color:#c0c0ff; margin-top:6px;">
+            Control térmico especializado → <strong>SWITCH COOL FIX</strong>
+        </div>
+        <div style="font-size:0.85rem; color:#ff9ff3; margin-top:6px;">
+            Menos calor • Mejor rendimiento • Más vida útil
+        </div>
+        <div style="font-size:0.8rem; color:#aaa; margin-top:6px;">
+            ⏱️ 2–2.5h | 💰 MX$750 | 🔊 -70% ruido | 📊 Juego estable
         </div>
         <a class="reserve-btn" 
-           href="https://wa.me/526142738302?text=Hola%20KiraTech%20Spa,%20me%20interesa%20el%20servicio%20SWITCH%20COOL%20FIX%20(Control%20T%C3%A9rmico)">
-           Reservar
+           href="https://wa.me/526142738302?text=Hola%20KiraTech%20Spa,%20me%20interesa%20el%20servicio%20SWITCH%20COOL%20FIX%20(Control%20T%C3%A9rmico).%20Mi%20nombre:%20[TU%20NOMBRE]">
+           📲 Ver detalles y reservar
         </a>
     </div>
+
 </div>
+
    
 
 <h2 class="section-title">⭐ Lo que dicen nuestros clientes</h2>
@@ -183,6 +204,7 @@
 
 </body>
 </html>
+
 
 
 
