--- a/index.html
+++ b/index.html
@@ -178,6 +178,30 @@
     </div>
     
 </div>
+<h2 class="section-title">📍 Ubicación</h2>
+
+<p style="text-align:center; color:#c0c0ff; font-size:0.95rem; margin-bottom:14px;">
+    Atención <strong style="color:#ff9ff3;">exclusivamente con cita previa</strong> para brindarte un servicio personalizado y sin esperas.
+</p>
+
+<div style="max-width:900px; margin:0 auto 25px auto; padding:12px; border-radius:14px; background:rgba(255,255,255,0.03);">
+    <iframe 
+        src="https://www.google.com/maps?q=Mina%20Corralitos%203535%20Chihuahua&output=embed"
+        width="100%"
+        height="320"
+        style="border:0; border-radius:12px;"
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+</div>
+
+<div style="text-align:center; margin-bottom:35px;">
+    <a class="reserve-btn"
+       target="_blank"
+       href="https://wa.me/526142738302?text=Hola%20KiraTech%20Spa,%20quiero%20agendar%20una%20cita%20antes%20de%20acudir%20al%20taller.%20Mi%20nombre:%20[TU%20NOMBRE]">
+       📲 Agendar cita por WhatsApp
+    </a>
+</div>
 
 <div class="cta-section">
     <h2 style="color:#ff9ff3; font-size:1.8rem; margin-bottom:15px;">📞 ¿Listo para que tu dispositivo brille?</h2>
@@ -204,8 +228,6 @@
 
 </body>
 </html>
-
-
 
 
 
