Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <!-- ===========================================
      META TAGS PARA SEO
      =========================================== -->
-<meta name="description" content="Servicio técnico profesional de reparación y mantenimiento de computadoras, laptops, PS4, Xbox y Nintendo Switch en Chihuahua. Limpieza profunda, cambio de componentes y diagnóstico experto.">
+<meta name="description" content="Servicio técnico de reparación y mantenimiento de computadoras, laptops, PS4, Xbox y Nintendo Switch en Chihuahua. Limpieza profunda, cambio de componentes y diagnóstico experto.">
 <!-- Descripción que aparece en resultados de búsqueda -->
 
 <meta name="keywords" content="reparación computadoras Chihuahua, servicio técnico PC Chihuahua, mantenimiento laptops Chihuahua, reparación consolas Chihuahua, cambio componentes PC, diagnóstico computadoras Chihuahua, limpieza PC profesional Chihuahua, reparación PS4 Chihuahua, reparación Xbox Chihuahua, reparación Nintendo Switch Chihuahua">
@@ -519,6 +519,7 @@
 
 </body>
 </html>
+
 
 
 
