--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             Análisis técnico • Limpieza especializada • Optimización del sistema
         </div>
         <div style="font-size:0.8rem; color:#aaa; margin-top:6px;">
-            ⏱️ 2–5h | $500 pesos - Te cambiamos la pasta termica por 100 pesos mas | 🔥 -15°C típico | 📊 Garantía 30 días
+            ⏱️ 2–5h | $500.00 - Te cambiamos la pasta termica por $150.00 pesos mas | 🔥 -15°C típico | 📊 Garantía 30 días
         </div>
         <a class="reserve-btn" 
            href="https://wa.me/526142738302?text=Hola%20KiraTech%20Tech%20Spa,%20me%20interesa%20el%20Mantenimiento%20Preventivo%20Completo%20(DIAGN%C3%93STICO%20Y%20LIMPIEZA%20PROFESIONAL)">
@@ -338,7 +338,7 @@
             Limpieza especializada • Reemplazo componentes • Rendimiento óptimo
         </div>
         <div style="font-size:0.8rem; color:#aaa; margin-top:6px;">
-            ⏱️ 2–2.5h | 💰 MX$750 | 🔊 -70% ruido | 📊 Mayor rendimiento
+            ⏱️ 2–2.5h | 💰 $550.00 incluye pasta termica | 🔊 -70% ruido | 📊 Mayor rendimiento
         </div>
         <a class="reserve-btn" 
            href="https://wa.me/526142738302?text=Hola%20KiraTech%20Tech%20Spa,%20me%20interesa%20el%20servicio%20PS4%20THERMAL%20SWAP%20(Mantenimiento%20T%C3%A9cnico%20Profesional).%20Mi%20nombre:%20[TU%20NOMBRE]">
@@ -354,7 +354,7 @@
         <div style="font-size:0.85rem; color:#ff9ff3; margin-top:6px;">
             Diagnóstico completo • Reemplazo térmico • Estabilidad máxima</div>
         <div style="font-size:0.8rem; color:#aaa; margin-top:6px;">
-            ⏱️ 2–2.5h | 💰 MX$750 | 🔊 -70% ruido | 📊 Mayor estabilidad
+            ⏱️ 2–2.5h | 💰 $550.00 | 🔊 -70% ruido | 📊 Mayor estabilidad
         </div>
         <a class="reserve-btn" 
            href="https://wa.me/526142738302?text=Hola%20KiraTech%20Tech%20Spa,%20me%20interesa%20el%20servicio%20XBOX%20COOLING%20SWAP%20(Estabilidad%20Pro).%20Mi%20nombre:%20[TU%20NOMBRE]">
@@ -371,7 +371,7 @@
             Mantenimiento profesional • Componentes originales • Rendimiento óptimo
         </div>
         <div style="font-size:0.8rem; color:#aaa; margin-top:6px;">
-            ⏱️ 2–2.5h | 💰 MX$750 | 🔊 -70% ruido | 📊 Juego estable
+            ⏱️ 2–2.5h | $550.00 incluye cambio de pasta termica | 🔊 -70% ruido | 📊 Juego estable
         </div>
         <a class="reserve-btn" 
            href="https://wa.me/526142738302?text=Hola%20KiraTech%20Tech%20Spa,%20me%20interesa%20el%20servicio%20SWITCH%20THERMAL%20FIX%20(Control%20T%C3%A9rmico).%20Mi%20nombre:%20[TU%20NOMBRE]">
@@ -519,6 +519,7 @@
 
 </body>
 </html>
+
 
 
 
