Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- Configuración responsive para móviles -->
 
-<title>KiraTech Tech Spa | Reparación y Mantenimiento de Computadoras y Consolas en Chihuahua</title>
+<title>KiraTech | Reparación y Mantenimiento de Computadoras y Consolas en Chihuahua</title>
 <!-- Título SEO optimizado con ubicación local -->
 
 <!-- ===========================================
@@ -519,6 +519,7 @@
 
 </body>
 </html>
+
 
 
 
